@@ -1,3 +1,8 @@
+2006-04-27  Derek Price  <derek@ximbiot.com>
+
+	* acx_with_gssapi.m4 (ACX_WITH_GSSAPI): Detect libgss for HP-UX.
+	(Report from Larry Jones <lawrence.jones@ugs.com>.)
+
 2006-04-25  Derek Price  <derek@ximbiot.com>
 
 	* extensions.m4, getcwd-path-max.m4, getlogin_r.m4, getpass.m4,
