@@ -1,3 +1,7 @@
+2006-04-27  Derek Price  <derek@ximbiot.com>
+
+	* NEWS: Note that GSSAPI builds under HP-UX.
+
 2006-04-25  Derek Price  <derek@ximbiot.com>
 
 	* configure.in: Move GNU function attribute protection from src/cvs.h.
